TIP 579.  Rename command safe::setAutoPathSync to safe::setSyncMode.  Add a section "Discussion" on the most common usage case.  Add "Version" header.

--- a/tip/579.md
+++ b/tip/579.md
@@ -4,6 +4,7 @@
 	Type:           Project
 	Vote:           Pending
 	Created:        07-Jul-2020
+	Version:        25-Jul-2020
 	Post-History:
 	Tcl-Version:    8.7
 	Keywords:       safe interp auto_path access_path
@@ -27,7 +28,7 @@ When **tcl::tm** facilities were added to Tcl, a restricted form of **glob** was
 
 # Proposed Change
 
-\(a\) A new exported command **safe::setAutoPathSync**
+\(a\) A new exported command **safe::setSyncMode**
 
 \(b\) A new option for Safe Base interpreters, -autoPath, defined under certain conditions explained below.
 
@@ -35,21 +36,21 @@ When **tcl::tm** facilities were added to Tcl, a restricted form of **glob** was
 
 The new command is
 
-**safe::setAutoPathSync ?newValue?**
+**safe::setSyncMode ?newValue?**
 
 When an argument is supplied, the command returns an error in two cases: \(a\) if the argument is not a boolean value; \(b\) if any Safe Base interpreters exist.
 
 Otherwise, the command is an accessor for a new namespace variable safe::AutoPathSync.  Normal return supplies the value of this variable.  The value is initialized when the file tcl8.6/safe.tcl is sourced by the autoloader.
 
-The value \[**safe::setAutoPathSync**\] controls the behavior of all Safe Base interpreters, and can be changed only when no Safe Base interpreters are defined.  Typically the value will be set as part of initialization.
+The value \[**safe::setSyncMode**\] controls the behavior of all Safe Base interpreters, and can be changed only when no Safe Base interpreters are defined.  Typically the value will be set as part of initialization.
 
-When \[**safe::setAutoPathSync**\] is true, the behavior is the same as in current Tcl.  The Safe Base interpreter's ::auto\_path is defined as a tokenized form of the *access path*.  Operations that change the Safe Base interpreter's *access path* also change its value of ::auto\_path.
+When \[**safe::setSyncMode**\] is true, the behavior is the same as in current Tcl.  The Safe Base interpreter's ::auto\_path is defined as a tokenized form of the *access path*.  Operations that change the Safe Base interpreter's *access path* also change its value of ::auto\_path.
 
-When \[**safe::setAutoPathSync**\] is false, ::auto\_path is defined to fulfil the requirements of *pkg_mkIndex\(n\)* and *library\(n\)* only.  It is not modified when the *access path* changes, except by operations that give the slave default paths derived from those of its master - in these cases the slave's ::auto\_path is set to a tokenized form of the master's ::auto\_path.
+When \[**safe::setSyncMode**\] is false, ::auto\_path is defined to fulfil the requirements of *pkg_mkIndex\(n\)* and *library\(n\)* only.  It is not modified when the *access path* changes, except by operations that give the slave default paths derived from those of its master - in these cases the slave's ::auto\_path is set to a tokenized form of the master's ::auto\_path.
 
-When \[**safe::setAutoPathSync**\] is false, each Safe Base interpreter is given a new option "-autoPath" which can be used with the commands **safe::interpCreate**, **safe::interpInit**, and **safe::interpConfigure** in the same way as other options.  The -autoPath option is undefined when \[**safe::setAutoPathSync**\] is true, permitting 100% compatibility with the existing Tcl Safe Base.
+When \[**safe::setSyncMode**\] is false, each Safe Base interpreter is given a new option "-autoPath" which can be used with the commands **safe::interpCreate**, **safe::interpInit**, and **safe::interpConfigure** in the same way as other options.  The -autoPath option is undefined when \[**safe::setSyncMode**\] is true, permitting 100% compatibility with the existing Tcl Safe Base.
 
-In order to implement this new definition of ::auto\_path in a Safe Base interpreter, some changes must be made to the behavior of existing Safe Base commands when \[**safe::setAutoPathSync**\] is false.  These changes are specified below.
+In order to implement this new definition of ::auto\_path in a Safe Base interpreter, some changes must be made to the behavior of existing Safe Base commands when \[**safe::setSyncMode**\] is false.  These changes are specified below.
 
 
 # Specification and Examples
@@ -58,8 +59,8 @@ The commands that can alter the *access path* are **safe::interpCreate**, **safe
 
 In this section:
 
-* The *Existing Case* is defined to mean Tcl either in its current form, or with this TIP implemented and with \[**safe::setAutoPathSync**\] true.
-* The *Extra Case* is defined to mean Tcl with this TIP implemented and with \[**safe::setAutoPathSync**\] false.  The differences from the *Existing Case* are the changes proposed by this TIP.
+* The *Existing Case* is defined to mean Tcl either in its current form, or with this TIP implemented and with \[**safe::setSyncMode**\] true.
+* The *Extra Case* is defined to mean Tcl with this TIP implemented and with \[**safe::setSyncMode**\] false.  The differences from the *Existing Case* are the changes proposed by this TIP.
 * Code Examples are given for the *Extra Case*.
 
 The effects of options -accessPath and -autoPath on the value of the slave's ::auto_path can be expressed in four rules, with a fifth rule for the command  **safe::interpAddToAccessPath**.
@@ -197,15 +198,44 @@ do not concern packages.
   * The commands in rule \(2\) set the slave's ::auto\_path to a tokenized form of the master interpreter's.
   * When other commands change the *access path*, the caller is responsible for making any necessary changes to the slave's ::auto\_path.  The new -autoPath option simplifies this task.
 
+# Discussion
+
+Because this TIP adds a new option -autoPath, it must go into detail about the interplay between -autoPath and -accessPath, especially when values are changed by **safe::interpConfigure**.  This leads to a fairly lengthy consideration of multiple cases (above).
+
+When writing tests for the reference implementation, many bugs were discovered in the existing Safe Base code, most especially in handling changes of options by **safe::interpConfigure**.  It is hard to avoid the conclusion that (like the present author) most users create a Safe Base interpreter with the properties that they want, and seldom if ever need to call **safe::interpConfigure**.
+
+In this usage case, the entirety of the TIP's specification is greatly simplified:
+
+> **Typical Use**
+
+> In many cases, the properties of a Safe Base interpreter can be specified when the interpreter is created, and then left unchanged for the lifetime of the interpreter.
+
+> If you wish to use Safe Base interpreters with "Sync Mode" off, evaluate the command
+
+> <pre>
+>        safe::setSyncMode 0
+> </pre>
+
+> Use **safe::interpCreate** or **safe::interpInit** to create an interpreter with the properties that you require.  The simplest way is not to specify -accessPath or -autoPath, which means the safe interpreter will use the same paths as the master interpreter.  However, if -accessPath is specified, then -autoPath must also be specified, or else it will be set to {}.
+
+> The value of -autoPath is that required to access tclIndex and pkgIndex.txt files according to the same rules as an unsafe interpreter (see pkg_mkIndex(n) and library(n)).
+
+> With "Sync Mode" on (the default), the option -autoPath is undefined, and
+the Safe Base sets the safe interpreter's ::auto\_path to a tokenized form of the
+*access path*. In addition to the directories present if "Safe Mode" is off,
+the ::auto\_path includes the numerous subdirectories and module paths
+that belong to the *access path*.
+
+
 # Reference Implementation
 
-Branches TIP-579-8-7 in the public fossil repository for Tcl.
+Branch TIP-579-8-7 in the public fossil repository for Tcl.
 
 # Compatibility
 
-The default value of \[**safe::setAutoPathSync**\] is 1.  The new interpreter option -autoPath is undefined in this case.  All existing code will behave in the same way as before.
+The default value of \[**safe::setSyncMode**\] is 1.  The new interpreter option -autoPath is undefined in this case.  All existing code will behave in the same way as before.
 
-If desired, the default value of \[**safe::setAutoPathSync**\] could be changed to 0 at a future major revision of Tcl.
+If desired, the default value of \[**safe::setSyncMode**\] could be changed to 0 at a future major revision of Tcl.
 
 # Copyright
 
