Extend TIP #581 for Tk too

--- a/tip/581.md
+++ b/tip/581.md
@@ -7,14 +7,13 @@
 	Post-History:
 	Tcl-Version:    8.6
 	Keywords:       Tcl
-	Tcl-Branch:     tip-580
+	Tcl-Branch:     tip-581
 ------
 
 # Abstract
 
-This TIP proposes to purge the usage of the Master/Slave paradigm from Tcl. This
-is a gradual process. Just to be clear: Tk is out of scope for this TIP.
-
+This TIP proposes to purge the usage of the Master/Slave paradigm from Tcl
+and Tk. This is a gradual process to be completed in Tcl/Tk 8.7.
 
 # Rationale
 
@@ -25,13 +24,21 @@ will - sure - have an opinion). Since Tcl is a language for everyone, we
 should not make life difficult for people being enforced to comply with
 whatever rules. Since there is very little impact on Tcl, let's bend a little bit.
 
-# Specification
+For Tk we cannot simply replace the Master/Slave paradigm to Parent/Child.
+Sometimes it's better to replace `Master` to `Main` (e.g. when menu's
+are involved). In the case of Tk's geometry handles (pack/place/grid),
+we will use the container/content concept. For Images, `Model` is
+a better name for `Master`.
+
+See: [Terminology, Power, and Inclusive Language in Internet-Drafts and RFCs](https://tools.ietf.org/id/draft-knodel-terminology-03.html)
+
+# Specification (Tcl part)
 
 In tclDecls.h, the following `#define`'s are added:
 <pre>
-\#define Tcl_CreateChild Tcl_CreateSlave
-\#define Tcl_GetChild Tcl_GetSlave
-\#define Tcl_GetParent Tcl_GetMaster
+\#define Tcl\_CreateChild Tcl\_CreateSlave
+\#define Tcl\_GetChild Tcl\_GetSlave
+\#define Tcl\_GetParent Tcl\_GetMaster
 </pre>
 In tclIntDecls.h, the following `#define` is added:
 <pre>
@@ -45,7 +52,7 @@ That's it! This will allow extension/application writers
 to comply with external limitations when they want to or
 are forced to do so.
 
-The "interp slaves" command will not be deprecated, not
+The "interp slaves" subcommand will not be deprecated, not
 even in Tcl 9.0. Neither will the usage of `Tcl_CreateSlave`
 and friends be deprecated: Extension/application writers
 are not forced to make the change, but they will be able
@@ -56,7 +63,34 @@ changed to comply with this renaming. The above `#define`'s will
 be reversed, so the functions will continue to be available under
 the old name too.
 
-See: [Terminology, Power, and Inclusive Language in Internet-Drafts and RFCs](https://tools.ietf.org/id/draft-knodel-terminology-03.html)
+# Specification (Tk part)
+
+In tk.h, the following `#define` is added:
+<pre>
+\#define Tk\_ImageModel Tk\_ImageMaster
+</pre>
+In tkDecls.h, the following `#define` is added:
+<pre>
+\#define Tk\_GetImageModelData Tk\_GetImageMasterData
+</pre>
+In tkInt.h, the following `#define` is added:
+<pre>
+\#define TkGetGeomContainer TkGetGeomMaster
+</pre>
+In tkIntPlatDecls.h, the following `#define` is added:
+<pre>
+\#define TkGetTransientContainer TkGetTransientMaster
+</pre>
+
+Further on, the "pack"/"place"/"grid" commands will get an additional
+subcommand "content", which is synonym for "slaves".
+
+The original "pack/place/grid slaves" subcommands will not be deprecated.
+
+In Tcl 8.7, the documentation and header files will be
+changed to comply with this renaming. The above `#define`'s will
+be reversed, so the functions will continue to be available under
+the old name too.
 
 # Compatibility
 
@@ -64,7 +98,8 @@ This is 100% upwards compatible.
 
 # Implementation
 
-See the [`tip-581`](https://core.tcl-lang.org/tk/timeline?r=tip-581) branch.
+See the [`tip-581 (Tcl)`](https://core.tcl-lang.org/tcl/timeline?r=tip-581) branch.
+and the [`tip-581 (Tk)`](https://core.tcl-lang.org/tk/timeline?r=tip-581) branch.
 
 # Copyright
 
