--- a/tip/582.md
+++ b/tip/582.md
@@ -51,7 +51,11 @@ complicated than these examples.
 There should be a comment format added to expressions. This will be done by
 making the `#` character, currently uninterpreted by expressions, be a comment
 introducing character whenever it is parsed at a point in the expression where
-it would be legal to have whitespace. The comment will last from that
+it would be legal to have whitespace. 
+(Note that this does not include the content of command substitutions in
+expressions; they were already covered by Tcl's command parsing rules, and as
+such already had a comment format.)
+The comment will last from that
 character to the end of the line or the end of the expression, whichever comes
 first. Note that because expressions are often enclosed in braces, comments
 are very likely to have to obey usual brace balancing rules in practice: this
