New function Tk_FontGetDescription()

--- a/tip/580.md
+++ b/tip/580.md
@@ -1,4 +1,4 @@
-# TIP 580: Export Tk_GetDoublePixelsFromObj and 4 more
+# TIP 580: Export Tk_GetDoublePixelsFromObj and 5 more
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -13,13 +13,13 @@
 
 # Abstract
 
-Export 5 new functions from the public stub table.
+Export 6 new functions through the public stub table.
 
 # Rationale
 
 Those exports are meant to be used by the revised\_text widget. The reason this new text replacement widget
 is currently integrated into Tk (in a separate branch) is because Tk doesn't export some symbols needed by
-revised\_text. Those 5 additional exports allow revised\_text - finally - to be compiled separate from Tk.
+revised\_text. Those 6 additional exports allow revised\_text to be compiled separate from Tk.
 
 # Specification
 
@@ -33,6 +33,12 @@ The following 5 functions are exported through the public stub table:
 
 They are currently available from `tkInt.h` as (`MODULE_SCOPE`) functions: `TkpAlwaysShowSelection`,
 `TkGetButtonMask`, `Tk_GetDoublePixelsFromObj`, `TkNewWindowObj`, `TkSendVirtualEvent`.
+
+One more new function:
+
+  * `Tcl_Obj *Tk_FontGetDescription(Tk_Font tkfont)`
+
+The implementation is a simplified version of the revised\_text `TkFontGetDescription()` function.
 
 # Compatibility
 
