Update TIP #496 (-placeholder* options) to mention the rfe follow-up about platform-specific default color in -placeholderforeground

--- a/tip/496.md
+++ b/tip/496.md
@@ -29,7 +29,7 @@ To control the text appearance the following new options will be added:
 
  **-placeholder**: The string to display. If empty (the default value) then nothing is displayed. This text value is always displayed with current font and justification. Note that justification can really be honored only if the available display space is large enough to contain the complete text value (this is anyway true also for the widget text itself, see [Tcl Core discussion] (http://code.activestate.com/lists/tcl-core/19657/)).
 
- **-placeholderforeground**: The color of the text. This is a normal option for the Tk widgets and a style option for the Ttk widgets. Default value is #b3b3b3 (gray70).
+ **-placeholderforeground**: The color of the text. This is a normal option for the Tk widgets and a style option for the Ttk widgets. Default value is #b3b3b3 (gray70) - Note: this default was later changed to be a platform-specific color, see ticket [de0c219db2](https://core.tcl-lang.org/tk/tktview/de0c219db21a71466283f7bb87dad4cb55346c48).
 
 # Implementation
 
