--- a/tip/581.md
+++ b/tip/581.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        17-July-2020
 	Post-History:
 	Tcl-Version:    8.6
