Add documentation of the new optional 'column' argument of the ttk::treeview bbox command in TIP #552.

--- a/tip/552.md
+++ b/tip/552.md
@@ -70,6 +70,9 @@ use either item selection or cell selection. It takes values `item` or `cell`.
 
 The **identify** subcommand is updated with the **cell** option.
 
+The **bbox** subcommand receives a new optional argument **column** allowing to
+obtain the bounding box of a cell.
+
 Default bindings are updated to use these features.
 
 The \<\<TreeviewSelect\>\> virtual event triggers on any selection change including cellselection.
