Mention the branch in the running text

--- a/tip/582.md
+++ b/tip/582.md
@@ -88,7 +88,8 @@ if {[info exists abc] && [info exists def] &&
 
 # Implementation
 
-Not yet.
+See the [`tip-582`](https://core.tcl-lang.org/tcl/timeline?r=tip-582) branch
+for Tcl.
 
 # Copyright
 
