Added note on (non-)splicing

--- a/tip/582.md
+++ b/tip/582.md
@@ -52,7 +52,9 @@ complicated than these examples.
 There should be a comment format added to expressions. This will be done by
 making the `#` character, currently uninterpreted by expressions, be a comment
 introducing character whenever it is parsed at a point in the expression where
-it would be legal to have whitespace. 
+it would be legal to have whitespace.
+It has the same lexical value as whitespace, never causing values to become
+spliced together.
 (Note that this does not include the content of command substitutions in
 expressions; they were already covered by Tcl's command parsing rules, and as
 such already had a comment format.)
