Add TIP #584: Better introspection for ttk (obsoletes TIP #555).

--- a/tip/555.md
+++ b/tip/555.md
@@ -1,12 +1,12 @@
 # TIP 555: Enable listing of layouts in ttk::Themes
 	Author:         Manfred Rosenberger<manfred.rosenberger@gmx.net>
-	State:          Draft
+	State:          Withdrawn
 	Type:           Project
 	Vote:           Pending
 	Created:        19-Nov-2019
 	Tcl-Version:	8.6
 	Post-History:
-	Tcl-Branch:     tip-555
+	Obsoleted-By:   584
 -----
 
 # Abstract
