Improve wording for TIP #584

--- a/tip/584.md
+++ b/tip/584.md
@@ -17,12 +17,12 @@ This TIP proposes to improve introspection capabilities of ttk.
 
 # Rationale
 
-People regularly regret (for instance
+People regularly request (for instance
 [in TkDocs](https://tkdocs.com/tutorial/styles.html#using),
 in [TIP #555](https://core.tcl-lang.org/tips/doc/trunk/tip/555.md),
 or recently again in
 [comp.lang.tcl](https://groups.google.com/d/msg/comp.lang.tcl/5E9kGZ5wEHQ/74JAo7-bAwAJ))
-that ttk introspection capabilities can be improved.
+that ttk introspection capabilities be improved.
 
 As it seems, the really missing bit is the ability to retrieve all available <u>styles</u>.
 
@@ -33,7 +33,7 @@ A new subcommand
 <b>ttk::style theme styles</b> <i>?themeName?</i>
 
 is created.
-It returns a list of all styles in <i>themeName</i>. If <i>themeName</i>
+It returns a list of all styles from <i>themeName</i>. If <i>themeName</i>
 is omitted, the current theme is used.
 
 With this new command, the user can request all styles available in a given
