Complement TIP #584 - ttk introspection with a new command 'style' returning the style actually used by any ttk widget.

--- a/tip/584.md
+++ b/tip/584.md
@@ -24,9 +24,11 @@ or recently again in
 [comp.lang.tcl](https://groups.google.com/d/msg/comp.lang.tcl/5E9kGZ5wEHQ/74JAo7-bAwAJ))
 that ttk introspection capabilities be improved.
 
-As it seems, the really missing bit is the ability to retrieve all available <u>styles</u>.
+As it seems, the really missing bit is the ability to retrieve <u>styles</u>.
 
 # Specification
+
+## 1. Obtaining all styles from a theme
 
 A new subcommand
 
@@ -77,6 +79,37 @@ This spits:
     <...and so on...> 
 </pre>
 
+## 2. Obtaining the style used by a given ttk widget
+
+A new subcommand
+
+<i>.pathname</i> <b>style</b>
+
+is created. It returns the style actually used by any ttk widget <i>.pathname</i>. This new command is added as a standard widget command (documented in ttk_widget(n)).
+
+Examples of use:
+
+<pre>
+    % ttk::scrollbar .sv  ; # default orient is vertical
+    .sv
+    % .sv style
+    Vertical.TScrollbar
+    %
+    % ttk::scrollbar .sh -orient horizontal
+    .sh
+    % .sh style
+    Horizontal.TScrollbar
+    %
+    % ttk::style configure style1.TButton -background yellow
+    % ttk::button .b -style style1.TButton
+    .b
+    % .b style
+    style1.TButton
+</pre>
+
+Note that this new <b>style</b> command is different from getting the <b>-style</b> option of the widget since [<i>.pathname</i> <b>cget -style</b>] returns the empty string if <i>.pathname</i>  uses the default style of the widget.
+
+Also, this is not the same as the widget class that one can get through [<b>winfo class</b> <i>.pathname</i>].
 
 # Implementation
 
