Escapes in TIP #585

--- a/tip/585.md
+++ b/tip/585.md
@@ -1,4 +1,4 @@
-# TIP 585: Promote the INDEX_TEMP_TABLE flag of Tcl_GetIndexFromObj*() to the public interface
+# TIP 585: Promote the INDEX\_TEMP\_TABLE flag of Tcl_GetIndexFromObj*() to the public interface
 	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
