Implementation is now available for TIP #585.

--- a/tip/585.md
+++ b/tip/585.md
@@ -27,7 +27,7 @@ The proposal of the present TIP is therefore to promote this flag to the public 
 
 # Implementation
 
-Coming soon in the [`tip-585`](https://core.tcl-lang.org/tcl/timeline?r=tip-585&unhide) branch.
+Available in the [`tip-585`](https://core.tcl-lang.org/tcl/timeline?r=tip-585&unhide) branch.
 
 This branch targets 8.7.
 
