TIP #585 now in voting state. Also, add considerations about rejected alternative.

--- a/tip/585.md
+++ b/tip/585.md
@@ -2,7 +2,7 @@
 	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        30-Aug-2020
 	Post-History:   
 	Keywords:       Tcl Tcl_GetIndexFromObj() Tcl_GetIndexFromObjStruct()
@@ -30,6 +30,15 @@ The proposal of the present TIP is therefore to promote this flag to the public 
 Available in the [`tip-585`](https://core.tcl-lang.org/tcl/timeline?r=tip-585&unhide) branch.
 
 This branch targets 8.7.
+
+# Rejected alternatives
+
+[It has been proposed]
+(https://sourceforge.net/p/tcl/mailman/tcl-core/thread/1c40b945-b105-3897-1db0-8333a0f04e10%40wu.ac.at/#msg37097636)
+that instead of exposing <b>INDEX\_TEMP\_TABLE</b> a new public routine be provided
+featuring a non-caching version of Tcl\_GetIndexFromObj*(), which would be needed for shared
+Tcl_Objs only. While this could of course be done, I think exposing the existing <b>INDEX\_TEMP\_TABLE</b> flag is simpler and complicates the API less than adding a new public
+routine.
 
 # Copyright
 
