Update TIP #580/581 results

--- a/tip/580.md
+++ b/tip/580.md
@@ -1,14 +1,18 @@
 # TIP 580: Export Tk_GetDoublePixelsFromObj and 5 more
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        14-July-2020
 	Post-History:
 	Tcl-Version:    8.7
 	Tk-Version:     8.7
 	Keywords:       export
 	Tk-Branch:      tip-580
+	Vote-Summary:   Accepted 9/0/0
+	Votes-For:      BG, DKF, FV, JD, JN, KBK, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 ------
 
 # Abstract
