--- a/tip/581.md
+++ b/tip/581.md
@@ -1,13 +1,17 @@
 # TIP 581: Master/Slave
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        17-July-2020
 	Post-History:
 	Tcl-Version:    8.6
 	Keywords:       Tcl
 	Tcl-Branch:     tip-581
+	Vote-Summary:   Accepted 9/0/0
+	Votes-For:      BG, DKF, FV, JD, JN, KBK, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 ------
 
 # Abstract
