TIP #585 accepted 6/0/0: YES: 6 (Culler, Landers, Nijtmans, Porter, Vogel, Walzer). NO: -. PRESENT: -. Vote conclusion email was sent 13-Sept-2020 to Tcl Core list. Implementation was merged the same day.

--- a/tip/585.md
+++ b/tip/585.md
@@ -1,8 +1,12 @@
 # TIP 585: Promote the INDEX\_TEMP\_TABLE flag of Tcl_GetIndexFromObj*() to the public interface
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
+	Vote-Summary:   Accepted 6/0/0
+	Votes-For:      DGP, FV, JN, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 	Created:        30-Aug-2020
 	Post-History:   
 	Keywords:       Tcl Tcl_GetIndexFromObj() Tcl_GetIndexFromObjStruct()
