Remove incorrect statement of mine in TIP #585

--- a/tip/585.md
+++ b/tip/585.md
@@ -41,8 +41,7 @@ This branch targets 8.7.
 (https://sourceforge.net/p/tcl/mailman/tcl-core/thread/1c40b945-b105-3897-1db0-8333a0f04e10%40wu.ac.at/#msg37097636)
 that instead of exposing <b>INDEX\_TEMP\_TABLE</b> a new public routine be provided
 featuring a non-caching version of Tcl\_GetIndexFromObj*(), which would be needed for shared
-Tcl_Objs only. While this could of course be done, I think exposing the existing <b>INDEX\_TEMP\_TABLE</b> flag is simpler and complicates the API less than adding a new public
-routine.
+Tcl_Objs only. While this could of course be done, I think exposing the existing <b>INDEX\_TEMP\_TABLE</b> flag is simpler.
 
 # Copyright
 
