TIP #474 implementation now complete for X11 and MacOS. Windows not tested yet.

--- a/tip/474.md
+++ b/tip/474.md
@@ -1,13 +1,14 @@
 # TIP 474: Treat the mouse wheel events in a uniform way
 	Author:	Arjen Markus <arjen.markus895@gmail.com>
+	Author:	Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:	Draft
 	Type:	Project
 	Vote:	Pending
 	Created:	25-Aug-2017
 	Post-history:	PM
-	Tcl-Version:	8.6
+	Tcl-Version:	8.7
 	Keywords:	Tk, events
-	Tk-Branch:	tip474-uniform-mouse-wheel
+	Tk-Branch:	tip474
 -----
 
 # Abstract
@@ -44,9 +45,9 @@ bindings fired.
     
     catch {console show}
     
-    bind .c <ButtonPress> [list puts "ButtonPress %W %b"]
-    bind .c <Shift-ButtonPress> [list puts "Shift-ButtonPress %W %b"]
-    bind .c <Control-ButtonPress> [list puts "Control-ButtonPress %W %b"]
+    bind .c <Button> [list puts "Button %W %b"]
+    bind .c <Shift-Button> [list puts "Shift-Button %W %b"]
+    bind .c <Control-Button> [list puts "Control-Button %W %b"]
     bind .c <MouseWheel> [list puts "MouseWheel %W %D"]
     bind .c <Shift-MouseWheel> [list puts "Shift-MouseWheel %W %D"]
     bind .c <Control-MouseWheel> [list puts "Control-MouseWheel %W %D"]
@@ -55,55 +56,60 @@ bindings fired.
 # Specification
 
 This TIP proposes to extend the bindings for the mouse wheel in such a
-way that it does not matter which platform the program runs on. To keep
-the incompatibility due to this change to a minimum, both types of
-bindings might hold on both types of events:
+way that it does not matter which platform the program runs on. On
+X11, the "Button 4" up to "Button 7" events will be translated internally
+to equivalent "MouseWheel" events. The modifiers "Option" and "Shift"
+will be supported analogously.
 
-    bind widget "ButtonPress-4" cmd
-    bind widget "MouseWheel" cmd
-
-\(One caveat is in the direction of the mouse wheel - using the first,
-one selects the direction via the button number: 4 for "up" and 5 for
-"down", whereas in the second form the %D substitution has to be used.\)
-
-It is simpler, however, to translate the "Button 4" and "Button 5"
-events to equivalent "Mousewheel" events. This can be introduced for
-Tcl/Tk 8.7. The modifiers "Control" and "Shift" should be supported
-analogously.
-
-As an example \(thanks to Jan Nijtmans for this\), the bindings for the
-text widget would look like this:
+As an example, the bindings for the text widget look like this:
 
     bind Text <MouseWheel> {
-        %W yview scroll %D pixels
+        %W yview scroll [expr {-%D/3}] pixels
     }
     bind Text <Option-MouseWheel> {
-        %W yview scroll %D pixels
+        %W yview scroll [expr {-3*%D}] pixels
     }
     bind Text <Shift-MouseWheel> {
-        %W xview scroll %D pixels
+        %W xview scroll [expr {-%D/3}] pixels
     }
     bind Text <Shift-Option-MouseWheel> {
-        %W xview scroll %D pixels
+        %W xview scroll [expr {-3*%D}] pixels
     }
 
 with the %D substitution giving the right amount of pixels.
 
 # Considerations regarding the incompatibility
 
-An application that currently uses the "ButtonPress-4/5" events needs
-to be changed to use the "MouseWheel" events regardless of platform.
+The physical buttons 4 up to 7 on Windows or Mac, will be
+translated to X11 buttons 8 up to 13. From the script level
+nothing changes: They still can be accessed from scripts
+as being buttons 4 up to 7. This means that buttons 4 to 7
+on X11 are not accessible through scripts any more, the
+only way to access those are through the translated
+MouseWheel events. On X11, buttons 4 up to 9 in scripts
+will handle the X11 buttons numbered 8 up to 13.
 
-If the application needs to support Tcl/Tk 8.6, an extra check is
-required to decide which events to listen to: a Linux-like platform
-together with Tk 8.6, instead of simply a Linux-like platform.
+On macOS, the scaling for MouseWheel buttons has always
+been different from those on Windows, with a factor of 120.
+This means that applications assuming Tk 8.6 <MouseWheel>
+events will need to be modified to the new behaviour,
+otherwise the screen movements will be far too much.
+On Windows, everything works as before, no incompatibility
+there. Many applications already define the <MouseWheel>
+binding on X11, even though in Tk 8.6 they are not
+used. Such applications will work on X11 in Tk 8.7 the
+same as in Tk 8.6
+
+If the application needs to support Tcl/Tk 8.6, an extra
+check is required to decide which events to listen to.
+An example can be found in the "cscroll" demo.
 
 This seems a minor inconvenience for gaining further
 platform-independence.
 
 # Reference Implementation
 
-In tk branch tip474-uniform-mouse-wheel.
+In tk branch tip474.
 
 # Copyright
 
