Elaborate changes in "xview/yview scroll"

--- a/tip/474.md
+++ b/tip/474.md
@@ -78,6 +78,15 @@ As an example, the bindings for the text widget look like this:
 
 with the %D substitution giving the right amount of pixels.
 
+The "xview scroll" and "yview scroll" commands are modified to accept
+floats in stead of integers. This doesn't mean that we can scroll
+now for 0.5 units or pages, the numbers are rounded up when positive
+and rounded down when negative. So ".w yview scroll -0.1 units" will
+have the same effect as ".w yview scroll -1 units". This way, the
+bindings don't have to do this rounding any more, as they are
+doing now.
+
+
 # Considerations regarding the incompatibility
 
 The physical buttons 4 up to 9 on Windows or Mac, will be
