Textual tweaks TIP #474

--- a/tip/474.md
+++ b/tip/474.md
@@ -13,22 +13,22 @@
 
 # Abstract
 
-This TIP proposes to treat the mouse wheel events on all platforms in a
-similar way. Currently, a program running on Windows should bind to
-"MouseWheel" events, whereas a program running on Linux should bind to
+This TIP proposes to treat the mouse wheel events on all platforms in
+the same way. Currently, a program running on Windows binds to
+"MouseWheel" events, whereas a program running on Linux binds to
 "ButtonPress-4" and "ButtonPress-5" commands. This makes it somewhat
-awkward to support both types of platforms.
+awkward to support both types of platforms having identical behaviour.
 
 
 # Rationale
 
 Tk provides a means to define user-interfaces using code that is almost
 perfectly independent of the platform that the program should run on. It
-therefore makes sens that the treatment of user actions, such as mouse
+therefore makes sense that the treatment of user actions, such as mouse
 clicks and the use of the mouse wheel should be independent of the
 platform as well. Currently, however, "Windows-type" and OSX platforms
 support the "MouseWheel" event, whereas for "Linux-type" platforms the
-program should bind to "ButtonPress-4" and "ButtonPress-5"  events.
+program binds to "ButtonPress-4" and "ButtonPress-5"  events.
 This is in contrast to almost all other events and event bindings.
 
 The documentation in its present form only describes the "MouseWheel"
@@ -61,39 +61,43 @@ X11, the "Button 4" up to "Button 7" events will be translated internally
 to equivalent "MouseWheel" events. The modifiers "Option" and "Shift"
 will be supported analogously.
 
-As an example, the bindings for the text widget look like this:
+As an example, the new bindings for the text widget will look like this:
 
     bind Text <MouseWheel> {
-        %W yview scroll [expr {-%D/3}] pixels
+        %W yview scroll %D/-3 pixels
     }
     bind Text <Option-MouseWheel> {
-        %W yview scroll [expr {-3*%D}] pixels
+        %W yview scroll %D*-3 pixels
     }
     bind Text <Shift-MouseWheel> {
-        %W xview scroll [expr {-%D/3}] pixels
+        %W xview scroll %D/-3 pixels
     }
     bind Text <Shift-Option-MouseWheel> {
-        %W xview scroll [expr {-3*%D}] pixels
+        %W xview scroll %D*-3 pixels
     }
 
-with the %D substitution giving the right amount of pixels.
+with the `%D` substitution giving the right (scaled) amount of pixels.
 
-The "xview scroll" and "yview scroll" commands are modified to accept
-floats in stead of integers. This doesn't mean that we can scroll
-now for 0.5 units or pages, the numbers are rounded up when positive
-and rounded down when negative. So ".w yview scroll -0.1 units" will
-have the same effect as ".w yview scroll -1 units". This way, the
-bindings don't have to do this rounding any more, as they are
-doing now.
+If `%D` is followed by '*' or '/', followed by an integer,
+this integer will be used as scale-factor before doing
+the `%D` substitution. The result will be rounded to the
+nearest integer (so, not the normal integer division)
+and if the result becomes 0 it will be replaced by -1 or 1.
+This is the same special case as previously implemented
+in the bindings using 'expr'.
 
+On all platforms, button 1 will be the left mouse button,
+button 2 the middle mouse button and button 3 the right
+mouse button. In Tk 8.6, MacOS has always swapped
+buttons 2 and 3. In Tk 8.7, Tk will do the swapping for us.
 
 # Considerations regarding the incompatibility
 
 The physical buttons 4 up to 9 on Windows or Mac, will be
 translated to X11 buttons 8 up to 13. From the script level
-nothing changes: They still can be accessed from scripts
-as being buttons 4 up to 9. This means that buttons 4 to 7
-on X11 are not accessible through scripts any more, the
+nothing changes: The buttons still can be accessed from scripts
+as being buttons 4 up to 9. This means that X11 buttons 4 to 7
+are not accessible through script any more, the
 only way to access those are through the translated
 MouseWheel events. On X11, buttons 4 up to 9 in scripts
 will handle the X11 buttons numbered 8 up to 13.
