--- a/tip/587.md
+++ b/tip/587.md
@@ -11,17 +11,41 @@
 
 # Abstract
 
-This TIP proposed to make the default encoding for the "source" command utf-8
+This TIP proposes to make the default encoding for the "source" command utf-8.
 
 # Rationale
 
-TODO
+The "utf-8" encoding is the most universal encoding available, more and more
+systems use it as system encoding. Introducing this change means that
+Tcl-9 scripts can start using any Unicode character without needing to
+use the escaped \\u???? or \\U?????? forms.
+
+Starting with TIP #389 (Tcl 8.7), invalid bytes 0x80 up to 0x9F are interpreted
+as the cp1252 characters € up to Ÿ. This means that any script which was
+written in the "cp1252" encoding (most common on Windows) will get the
+expected outcome using Tcl's "utf-8" decoder. Since "cp1252" is a superset
+of "iso8859-1" (most common on other UNIX'es), the same holds for "iso8859-1".
+
+Tcl's current "utf-8" decoder strips the first BOM (Byte Order Mark) from
+the stream. This means that even scripts using the Windows BOM-prepended
+"utf-8" files (not recommended, but still can be produced by Notepad)
+will work fine.
+
+# Specification
+
+ * The `source` command without `-encoding` will assume "utf-8" as default in
+   stead of the system encoding.
+ * Scripts started from the "tclsh" commandline without `-encoding` will
+   read the file using Tcl's "utf-8" decoder.
+ * The `open` command and other channel functionalities are kept as
+   they are now.
 
 # Compatibility
 
-For scripts using the ASCII encoding only (as was the only portable way
+For scripts using ASCII characters only (as was the only portable way
 to write scripts in Tcl 8.x) this is fully upwards compatible. Scripts
-assuming a different system encoding than utf-8 will break.
+assuming a different system encoding than "ascii", "utf-8", "cp1252"
+or "iso-8859-1" will break.
 
 # Implementation
 
